Add Windows install script and usage docs